<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3E50"
    tools:context="jef.catipay.com.easycalc.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/firstNumber"
        android:textColor="#f9f8f8"
        android:layout_width="320dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:textColorHint="#f9f8f8"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="320dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:hint="@string/enter_second_number"
        android:textColorHint="#f9f8f8"
        android:textSize="14sp"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNumber" />

    <Button
        android:id="@+id/multiplyBtn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp"
        android:background="#34495E"
        android:text="@string/multiply"
        android:textColor="#f9f8f8"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:background="#34495E"
        android:text="@string/addition"
        android:textColor="#f9f8f8"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/subtractBtn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="35dp"
        android:background="#34495E"
        android:text="@string/subtraction"
        android:textColor="#f9f8f8"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/addBtn"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="#34495E"
        android:text="@string/clear"
        android:textColor="#f9f8f8"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/subtractBtn"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/divideBtn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="34dp"
        android:background="#34495E"
        android:text="@string/divide"
        android:textColor="#f9f8f8"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/multiplyBtn"
        app:layout_constraintTop_toBottomOf="@+id/subtractBtn" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp"
        android:background="#34495E"
        android:text="@string/exit"
        android:textColor="#f9f8f8"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/divideBtn"
        app:layout_constraintTop_toBottomOf="@+id/clearBtn" />

    <TextView
        android:id="@+id/result"
        android:layout_width="320dp"
        android:layout_height="37dp"
        android:textColor="#f9f8f8"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/secondNumber"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />




</android.support.constraint.ConstraintLayout>
